--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ span {
 
 .home-content p {
   font-size: 1.8rem;
+  margin-bottom: 16px;
 }
 
 .social-media a {
@@ -494,3 +495,4 @@ span {
     font-size: 50%;
   }
 }
+
